--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -1,7 +1,7 @@
 ---
 title: "Aids Drug"
-author: "Put your name here"
-date: "put the date here"
+author: "Eduardo Noriega"
+date: "9/28/22"
 output: html_document
 ---
 
