--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -9,6 +9,9 @@ output: html_document
 require(tidyverse)
 require(tigerstats)
 triUmp <-read.csv(file="triUmpsal.csv",header=TRUE)
+
+female=filter(triUmp,gender== "F")
+IVDrugUsers=filter(triUmp,DrugUser=="yes")
 ```
 
 # Introduction
@@ -23,6 +26,14 @@ A new  preventative aids drug (triUmpsal) is under test in clinical trials. Cons
 
 <!--Decide on your methods:  use "variable analysis" or other appropriate descriptors.  Make sure to choose at least one graphical method and at least one numerical method. Discuss what data manipulations may be needed, for example sub-setting or other binning procedures and what sort of graphical displays and inferential tools will be used!-->
 
+1. Is the vaccine effective for drug users? 2. Is the the vaccine effective for women?
+
+$H_0$: The vaccine is not effective for drug users.  
+$H_A$: The vaccine is effective for drug users.  
+
+$H_0$: The vaccine is not effective for females.  
+$H_A$: The vaccine is effective for females.  
+
 # Results
 
 <!--Divide this section into two sub-sections:  One for your descriptive results and one for your inferential results.!-->
@@ -33,6 +44,13 @@ A new  preventative aids drug (triUmpsal) is under test in clinical trials. Cons
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe patterns, if any, that exist in the data as focused toward the research question. Bottom line is to explain the features of the graph that are relevant to conforming to or departing from what is expected by the null hypothesis !-->
 
+```{r}
+barchartGC(~infected + treatment,data=IVDrugUsers)
+barchartGC(~infected + treatment,data=IVDrugUsers, type="percent")
+
+```
+
+
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns, if any, that exist in the data as focused toward the research question!-->
@@ -40,6 +58,7 @@ A new  preventative aids drug (triUmpsal) is under test in clinical trials. Cons
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfies the assumptions and is appropriate to answer the research question!-->
+
   
 # Discussion and Conclusion
 
