--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -10,7 +10,7 @@ require(tidyverse)
 require(tigerstats)
 triUmp <-read.csv(file="triUmpsal.csv",header=TRUE)
 
-female=filter(triUmp,gender== "F")
+females=filter(triUmp,gender== "F")
 IVDrugUsers=filter(triUmp,DrugUser=="yes")
 ```
 
@@ -43,6 +43,18 @@ $H_A$: The vaccine is effective for females.
 ### Graphical Descriptive Results
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe patterns, if any, that exist in the data as focused toward the research question. Bottom line is to explain the features of the graph that are relevant to conforming to or departing from what is expected by the null hypothesis !-->
+
+For Females
+
+```{r}
+barchartGC(~infected + treatment,data=females)
+barchartGC(~infected + treatment,data=females, type="percent")
+
+```
+
+The graph shows that females with the vaccine are likely to get aids, versus the ones that received the placebo.
+
+Drug Users  
 
 ```{r}
 barchartGC(~infected + treatment,data=IVDrugUsers)
