--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -52,7 +52,7 @@ barchartGC(~infected + treatment,data=females, type="percent")
 
 ```
 
-The graph shows that females with the vaccine are likely to get aids, versus the ones that received the placebo.
+The graph shows that 60% of females with the vaccine are likely to get aids, versus the ones that received the placebo which was only 40% of females.
 
 Drug Users  
 
@@ -62,6 +62,7 @@ barchartGC(~infected + treatment,data=IVDrugUsers, type="percent")
 
 ```
 
+The vaccines shows to be effective with the drug users, which about 25% of them became infected with aids, versus those who received the placebo which is close to 70%.
 
 ### Numerical Descriptive Results
 
@@ -70,6 +71,7 @@ barchartGC(~infected + treatment,data=IVDrugUsers, type="percent")
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfies the assumptions and is appropriate to answer the research question!-->
+
 
   
 # Discussion and Conclusion
